implementation of two new endpoints for setting/unsetting the security mode
